src/objects/Community_Admins__c.object
<CustomObject>
    <description>Used to store data values that are necessary for some Community features such as Terms and Conditions</description>
    <fields>
        <fullName>Terms_Archived_Date__c</fullName>
        <description>Represents the Date/Time when the Terms records become Archived.</description>
        <inlineHelpText>Represents the Date/Time when the Terms records become Archived.</inlineHelpText>
        <label>Terms Archived Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_Body__c</fullName>
        <description>Represents the Body of the Terms that will be displayed in the Community Portal when published.</description>
        <inlineHelpText>Represents the Body of the Terms that will be displayed in the Community Portal when published.</inlineHelpText>
        <label>Terms Body</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Terms_Published_Date__c</fullName>
        <description>Represents the Date/Time when the Terms records was published.</description>
        <inlineHelpText>Represents the Date/Time when the Terms records was published.</inlineHelpText>
        <label>Terms Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_Req_New_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, Users will need to Review and Sign the newly published Community Terms.</description>
        <inlineHelpText>When selected, Users will need to Review and Sign the newly published Community Terms.</inlineHelpText>
        <label>Terms Req New Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_Status__c</fullName>
        <description>Represents the Status of the Terms &amp; Conditions from Writing to Publishing.</description>
        <inlineHelpText>Represents the Status of the Terms &amp; Conditions from Writing to Publishing.</inlineHelpText>
        <label>Terms Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Community Admin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Terms_Published_Date__c</columns>
        <columns>Terms_Archived_Date__c</columns>
        <columns>Terms_Status__c</columns>
        <columns>Terms_Req_New_Signature__c</columns>
        <columns>Terms_Body__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CA.{yy}{mm}{0}</displayFormat>
        <label>Community Admin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Admin</pluralLabel>
    <recordTypes>
        <fullName>Community_Terms</fullName>
        <active>true</active>
        <description>Represents Terms and Conditions for the Community.</description>
        <label>Community Terms</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Terms</fullName>
        <active>true</active>
        <description>Represents Terms and Conditions for creating a Group.</description>
        <label>Group Terms</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>